# Telecommande_DCC_JC3248W535

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
Components/battery_monitor/: CMakeLists.txt  battery_integration_example.c  battery_monitor.c  battery_monitor.h  battery_ui.c  battery_ui.h
Components/encoder/: CMakeLists.txt  encoder.c  encoder.h  encoder_integration_example.c  encoder_ui.c  encoder_ui.h
Components/espnow_link/: CMakeLists.txt  espnow_link.c
Components/espnow_link/include/: espnow_link.h
Components/ui/: CMakeLists.txt  img_loco_unknown.c  ui.c  ui.h  ui_Screen0.c  ui_Screen0.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_images.c
Components/ui/assets/: ELok_Ge44_III_RhB.c  ELok_RE44_II_R4.c  Elok_ABe812.c  Elok_GE44_III.c  Elok_Ge44_II.c  arrow_left_15597.c  arrow_right_15604.c  bat_3_4.c  bat_en_charge.c  bat_faible.c  bat_moitie.c  bat_pleine.c  bat_vide.c  wifi0.c  wifi1.c  wifi2.c  wifi3.c  wifi4.c
Components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_signal.c
Components/wifi_manager/include/: wifi_manager.h  wifi_signal.h
main/: CMakeLists.txt  idf_component.yml  main.c
