idf_component_register(SRCS "img_loco_unknown.c" "ui_Screen0.c"
                            "ui_Screen1.c"
                            "ui_Screen2.c"
                            "ui_Screen3.c"
                            "ui_Screen4.c"
                            "ui.c"
                            "ui_helpers.c"
                            "ui_images.c"
                            "assets/arrow_left_15597.c"
                            "assets/arrow_right_15604.c"
                            "assets/bat_3_4.c"
                            "assets/bat_en_charge.c"
                            "assets/bat_faible.c"                            
                            "assets/bat_moitie.c"
                            "assets/bat_pleine.c"
                            "assets/bat_vide.c"                            
                            "assets/Elok_ABe812.c"
                            "assets/Elok_Ge44_II.c"
                            "assets/ELok_Ge44_III_RhB.c"
                            "assets/Elok_GE44_III.c"
                            "assets/ELok_RE44_II_R4.c"                            
                            "assets/wifi0.c"
                            "assets/wifi1.c"
                            "assets/wifi2.c"
                            "assets/wifi3.c"
                            "assets/wifi4.c"

                       INCLUDE_DIRS "." "../wifi_manager/include"
                       REQUIRES lvgl__lvgl esp_wifi espressif__esp_lvgl_port espnow_link wifi_manager)
